[package]
name = "search-content-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-cors = "0.6.4"
actix-http = "3.3.1"
actix-service = "2.0.2"
actix-web = "4.3.1"
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4.19"
r2d2 = "0.8.10"
r2d2_redis = "0.14.0"
redis = "0.23.1"
simple_logger = "4.2.0"
tokio = "1.29.1"
